--- a/BulgarianHeritage/ViewControllers/Login/LoginViewController.xib
+++ b/BulgarianHeritage/ViewControllers/Login/LoginViewController.xib
@@ -10,7 +10,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LoginViewController" customModule="BulgarianCulture" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LoginViewController" customModule="BulgarianHeritage" customModuleProvider="target">
             <connections>
                 <outlet property="createAccountButton" destination="aYH-2h-0Zm" id="Gdz-9h-Y1b"/>
                 <outlet property="invalidErrorLabel" destination="IYT-yf-cOM" id="hDE-Fh-1sr"/>
@@ -18,6 +18,8 @@
                 <outlet property="passwordTextField" destination="xTp-MO-NTb" id="zpP-Dj-V6y"/>
                 <outlet property="usernameTextField" destination="x7n-zW-Pdb" id="rhh-7A-Ine"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
+                <outletCollection property="textFieldCollection" destination="x7n-zW-Pdb" collectionClass="NSMutableArray" id="DkU-5A-czF"/>
+                <outletCollection property="textFieldCollection" destination="xTp-MO-NTb" collectionClass="NSMutableArray" id="9DS-d4-hFN"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -29,7 +31,7 @@
                     <rect key="frame" x="24" y="188" width="366" height="48.666666666666657"/>
                     <nil key="textColor"/>
                     <fontDescription key="fontDescription" type="system" pointSize="22"/>
-                    <textInputTraits key="textInputTraits"/>
+                    <textInputTraits key="textInputTraits" autocorrectionType="no" returnKeyType="next" textContentType="username"/>
                     <userDefinedRuntimeAttributes>
                         <userDefinedRuntimeAttribute type="color" keyPath="placeholderColor">
                             <color key="value" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -65,7 +67,7 @@
                     <rect key="frame" x="24" y="248.66666666666663" width="366" height="49"/>
                     <nil key="textColor"/>
                     <fontDescription key="fontDescription" type="system" pointSize="22"/>
-                    <textInputTraits key="textInputTraits"/>
+                    <textInputTraits key="textInputTraits" autocorrectionType="no" returnKeyType="done" secureTextEntry="YES" textContentType="password"/>
                     <userDefinedRuntimeAttributes>
                         <userDefinedRuntimeAttribute type="color" keyPath="placeholderColor">
                             <color key="value" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -113,7 +115,7 @@
                     <color key="textColor" red="1" green="0.19820019520000001" blue="0.1110091218" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="j7u-da-t1L" customClass="ColorStyledButton" customModule="BulgarianCulture" customModuleProvider="target">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="j7u-da-t1L" customClass="ColorStyledButton" customModule="BulgarianHeritage" customModuleProvider="target">
                     <rect key="frame" x="57" y="786" width="300" height="56"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
