--- a/BulgarianHeritage/ViewControllers/Menu/MenuViewController.xib
+++ b/BulgarianHeritage/ViewControllers/Menu/MenuViewController.xib
@@ -10,7 +10,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MenuViewController" customModule="BulgarianCulture" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MenuViewController" customModule="BulgarianHeritage" customModuleProvider="target">
             <connections>
                 <outlet property="logOutButton" destination="fhy-eJ-Lnh" id="H3g-Nn-JYr"/>
                 <outlet property="tableView" destination="SfY-Sf-gSn" id="nGu-u2-ukn"/>
@@ -26,12 +26,12 @@
                     <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                 </imageView>
                 <tableView clipsSubviews="YES" contentMode="scaleAspectFill" alwaysBounceVertical="YES" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="SfY-Sf-gSn">
-                    <rect key="frame" x="0.0" y="88" width="414" height="730"/>
+                    <rect key="frame" x="0.0" y="88" width="414" height="726"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <color key="separatorColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 </tableView>
                 <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fhy-eJ-Lnh">
-                    <rect key="frame" x="20" y="826" width="100" height="36"/>
+                    <rect key="frame" x="20" y="822" width="100" height="36"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="36" id="5wn-C0-9NF"/>
                         <constraint firstAttribute="width" constant="100" id="vck-9j-7XR"/>
@@ -50,7 +50,7 @@
             <constraints>
                 <constraint firstItem="SfY-Sf-gSn" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="44" id="EcP-xC-lYa"/>
                 <constraint firstAttribute="bottom" secondItem="fgK-YT-DTR" secondAttribute="bottom" id="JVH-lN-QLg"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="fhy-eJ-Lnh" secondAttribute="bottom" id="OlX-uB-Edd"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="fhy-eJ-Lnh" secondAttribute="bottom" constant="4" id="OlX-uB-Edd"/>
                 <constraint firstItem="fgK-YT-DTR" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="R9h-D7-kX9"/>
                 <constraint firstAttribute="trailing" secondItem="fgK-YT-DTR" secondAttribute="trailing" id="Tyj-UN-3mC"/>
                 <constraint firstItem="SfY-Sf-gSn" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="ZPN-0G-s9e"/>
