--- a/BulgarianHeritage/ViewControllers/Registration/RegistrationViewController.xib
+++ b/BulgarianHeritage/ViewControllers/Registration/RegistrationViewController.xib
@@ -10,7 +10,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="RegistrationViewController" customModule="BulgarianCulture" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="RegistrationViewController" customModule="BulgarianHeritage" customModuleProvider="target">
             <connections>
                 <outlet property="alreadyInUseErrorLabel" destination="fa2-fI-rKz" id="0ah-2g-DNp"/>
                 <outlet property="infoLabel" destination="8BZ-oo-z2a" id="Ksn-7G-IgQ"/>
@@ -18,6 +18,8 @@
                 <outlet property="registerButton" destination="jUM-2P-S0j" id="gtl-cD-uD0"/>
                 <outlet property="usernameTextField" destination="Fpr-Mx-GkH" id="xe6-gW-lJd"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
+                <outletCollection property="textFieldCollection" destination="Fpr-Mx-GkH" collectionClass="NSMutableArray" id="9hx-sz-IXa"/>
+                <outletCollection property="textFieldCollection" destination="NLw-es-RqX" collectionClass="NSMutableArray" id="TVX-Mx-5sD"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -29,7 +31,7 @@
                     <rect key="frame" x="24" y="188" width="366" height="49"/>
                     <nil key="textColor"/>
                     <fontDescription key="fontDescription" type="system" pointSize="22"/>
-                    <textInputTraits key="textInputTraits"/>
+                    <textInputTraits key="textInputTraits" autocorrectionType="no" returnKeyType="next" textContentType="username"/>
                     <userDefinedRuntimeAttributes>
                         <userDefinedRuntimeAttribute type="color" keyPath="placeholderColor">
                             <color key="value" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -65,7 +67,7 @@
                     <rect key="frame" x="24" y="249" width="366" height="48.5"/>
                     <nil key="textColor"/>
                     <fontDescription key="fontDescription" type="system" pointSize="22"/>
-                    <textInputTraits key="textInputTraits"/>
+                    <textInputTraits key="textInputTraits" autocorrectionType="no" returnKeyType="done" secureTextEntry="YES" textContentType="password"/>
                     <userDefinedRuntimeAttributes>
                         <userDefinedRuntimeAttribute type="color" keyPath="placeholderColor">
                             <color key="value" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -109,7 +111,7 @@
                     <color key="textColor" red="1" green="0.19820019520000001" blue="0.1110091218" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jUM-2P-S0j" customClass="ColorStyledButton" customModule="BulgarianCulture" customModuleProvider="target">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jUM-2P-S0j" customClass="ColorStyledButton" customModule="BulgarianHeritage" customModuleProvider="target">
                     <rect key="frame" x="57" y="786" width="300" height="56"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
